# newsensor-streamlit

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  ENHANCED_METADATA.md  MONGODB_MIGRATION.md  README.md  RERANKING.md  STREAMLIT_CLOUD_MONGODB_FIX.md  debug_mongodb_connection.py  debug_mongodb_page.py  debug_streamlit_cloud.py  docker-compose.yml  embedding-docs.md  llamaparse-docs.md  main.py  mineru-docs.md  prd.md  pyproject.toml  pytest.ini  reranking-plan.md  test_ragas_evaluator.py  test_ragas_exact.py  test_ragas_simple.py
.claude/: settings.local.json
.github/: copilot-instructions.md
data/conversations/: 0d64e7e4-275f-43a1-8209-1ee629882e59.json  184969e4-a2cb-4ee7-8e38-a5af97e16dbf.json  22d5657a-eec1-4a9e-af4f-1f86d3d84e2f.json  24982273-e1da-49d3-883e-3e85369f126b.json  2d787472-3822-4c5a-ba1c-31732abc40e0.json  52a228d2-0b5d-4ba6-b917-88f2180df539.json  5473e9ec-451d-41c6-b077-7806e0d4771e.json  (+8 more)
scripts/: evaluate_rag_no_metadata.py  evaluate_rag_with_metadata.py  example_mongodb_usage.py  ingest_enhanced_metadata.py  ingest_no_metadata.py  manual_evaluation.py  migrate_conversations_to_mongodb.py  ragas_evaluation_sample.py  run_experiment.py  test_backend_switching.py  test_chat_history.py  test_conversation_saving.py  test_enhanced_metadata.py  test_language_switching.py  test_mongodb_migration.py  test_multi_sensor_detection.py  test_new_conversation_saving.py  test_page_metadata.py  test_parser_system.py  test_pdf_processing.py  test_rag_provider_switching.py  test_ragas.py  test_s15s_search.py
tests/: test_core.py
(+57 files in other folders)
